#4533 closed defect (fixed)
Broken MPEG-2 GOP after 1010b36d8672d891e77aa713e07ff749e8b0797f
| Reported by: | Kieran Kunhya | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | mpeg2video regression videolan |
| Cc: | Michael Niedermayer | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Only reproducible via API so no ffmpeg log etc.
ff_set_sar needs to be called AFTER ff_set_dimensions
Otherwise av_image_check_sar uses an invalid width/height
(Thanks to Meuuh for report)
Change History (3)
comment:1 by , 11 years ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
comment:2 by , 11 years ago
| Keywords: | mpeg2video regression videolan added |
|---|---|
| Priority: | normal → important |
| Version: | unspecified → git-master |
videolan ticket 14811
comment:3 by , 11 years ago
| Cc: | added |
|---|
This should probably be backported but neither here nor on videolan is enough information for me to know which branches are affected.
The fix was backported to 2.6, sorry for the noise!
Note:
See TracTickets
for help on using tickets.



Fixed in 7f45f7fc7f4977e3a0697dfa0771015b4b985e24