avcodec/mpeg12dec: use the correct dimensions for checking SAR

Fixes Ticket4533

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>